Fix header spacing.

--- a/src/css/components/header/_header.scss
+++ b/src/css/components/header/_header.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
+    padding: 0 3rem;
     z-index: $z-index-high;
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 24px 0px;
 
